k8s-local/ingress/middleware-ratelimit.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: django-auth-ratelimit
  namespace: django-auth

spec:
  rateLimit:
    average: 100
    burst: 200
