k8s-local/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: django-auth
  namespace: django-auth

  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: django-auth-django-auth-ratelimit@kubernetescrd

spec:
  ingressClassName: traefik

  tls:
    - hosts:
        - django-auth.manjilgautam.com.np
      secretName: django-auth-tls

  rules:
    - host: django-auth.manjilgautam.com.np

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: django-auth
                port:
                  number: 80
